# index/server/pkg/server/types.go
@@ -45,7 +45,8 @@ func (params *ServeDevfileIndexV2Params) toIndexParams() IndexParams {
 		GitRevision:      params.GitRevision,
 		Provider:         params.Provider,
 		SupportUrl:       params.SupportUrl,
-		LastModified:     params.LastModified,
+		MinLastModified:  params.MinLastModified,
+		MaxLastModified:  params.MaxLastModified,
 	}
 }
 
@@ -81,7 +82,8 @@ func (params *ServeDevfileIndexV2WithTypeParams) toIndexParams() IndexParams {
 		GitRevision:      params.GitRevision,
 		Provider:         params.Provider,
 		SupportUrl:       params.SupportUrl,
-		LastModified:     params.LastModified,
+		MinLastModified:  params.MinLastModified,
+		MaxLastModified:  params.MaxLastModified,
 	}
 }
 
